@@ -297,23 +297,23 @@ static int mp3_decode(snd_stream_t *stream, byte *buf, int len)
 					sample = 0x7FFF;
 				else
 					sample >>= (MAD_F_FRACBITS + 1 - 16);
-#if (BYTE_ORDER == BIG_ENDIAN)
+#if (ENDIAN_RUNTIME_DETECT + 0) != 0
+				if (host_bigendian)
+				{
+					*buf++ = (sample >> 8) & 0xFF;
+					*buf++ = sample & 0xFF;
+				}
+				else /* assumed LITTLE_ENDIAN. */
+				{
+					*buf++ = sample & 0xFF;
+					*buf++ = (sample >> 8) & 0xFF;
+				}
+#elif (BYTE_ORDER == BIG_ENDIAN)
 				*buf++ = (sample >> 8) & 0xFF;
 				*buf++ = sample & 0xFF;
 #elif (BYTE_ORDER == LITTLE_ENDIAN)
 				*buf++ = sample & 0xFF;
 				*buf++ = (sample >> 8) & 0xFF;
-#elif ENDIAN_RUNTIME_DETECT
-				if (host_bigendian) /*(host_byteorder == BIG_ENDIAN)*/
-				{
-					*buf++ = (sample >> 8) & 0xFF;
-					*buf++ = sample & 0xFF;
-				}
-				else
-				{ /* LITTLE_ENDIAN */
-					*buf++ = sample & 0xFF;
-					*buf++ = (sample >> 8) & 0xFF;
-				}
 #else
 #error "Unsupported endianness."
 #endif	/* BYTE_ORDER */
